--- a/openshift/templates/nginx.json
+++ b/openshift/templates/nginx.json
@@ -38,7 +38,8 @@
         ],
         "selector": {
           "name": "${NAME}"
-        }
+        },
+        "ipFamilyPolicy": "PreferDualStack"
       }
     },
     {
